--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,24 @@
+html {
+  font-size: 20px;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
+    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  /* main colors */
+  --bg-color: #0d0d0d;
+  --text-primary-color: #f4f4f4;
+  --text-secondary-color: #5b5b5b;
+  --accent-color: #d4c951;
+  --completed-color: #51d466;
+  --container-primary-color: #1a1c1e;
+  --container-secondary-color: #131416;
+  /* nav colors */
+  --nav-container-bg-color: #0d0d0d99;
+  --nav-item-bg-color: #2b2d31;
 }
