--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,19 @@
+@font-face {
+  font-family: "PPPangramSansRounded-Medium";
+  src: url("./assets/PPPangramSansRounded-Medium.otf") format("opentype");
+}
+@font-face {
+  font-family: "PPPangramSansRounded-Semibold";
+  src: url("./assets/PPPangramSansRounded-Semibold.otf") format("opentype");
+}
 html {
   font-size: 20px;
 }
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
-    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: "PPPangramSansRounded-Medium", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
@@ -21,4 +30,62 @@ body {
   /* nav colors */
   --nav-container-bg-color: #0d0d0d99;
   --nav-item-bg-color: #2b2d31;
+  /*  */
+  --gap-large: 2.5rem;
+  --gap-medium: 1rem;
+  --gap-small: 0.5rem;
+}
+.container {
+  position: relative;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  background-color: var(--bg-color);
+  color: var(--text-primary-color);
+}
+.content {
+  position: relative;
+  min-height: 100vh;
+  padding: 0 5vw;
+}
+.index__svg__wrapper {
+  scale: 0.9;
+  animation: rotate 20s infinite linear;
+}
+.index__subheading {
+  max-width: 25ch;
+  text-align: center;
+}
+.index__cta {
+  animation: pulse 0.75s infinite ease-in-out alternate;
+}
+@keyframes rotate {
+  from {
+    rotate: 0deg;
+  }
+  to {
+    rotate: 360deg;
+  }
+}
+@keyframes pulse {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@media (min-width: 1200px) {
+  .index__subheading {
+    max-width: 40ch;
+  }
+}
+@media only screen and (hover: none) and (pointer: coarse) {
+  .container {
+    min-height: -webkit-fill-available;
+  }
+  .content {
+    min-height: -webkit-fill-available;
+  }
 }
