--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
+  background-color: var(--bg-color);
 }
 :root {
   /* main colors */
@@ -35,6 +36,21 @@ body {
   --gap-medium: 1rem;
   --gap-small: 0.5rem;
 }
+form {
+  width: 100%;
+}
+input {
+  all: unset;
+}
+button {
+  all: unset;
+  text-align: center;
+  cursor: pointer;
+  transition: scale 0.3s ease-out;
+}
+button:active {
+  scale: 0.95;
+}
 .container {
   position: relative;
   min-height: 100vh;
@@ -42,10 +58,12 @@ body {
   justify-content: center;
   background-color: var(--bg-color);
   color: var(--text-primary-color);
+  /* padding: 5vw 0; */
 }
 .content {
   position: relative;
   min-height: 100vh;
+  width: 100%;
   padding: 0 5vw;
 }
 .index__svg__wrapper {
@@ -64,7 +82,7 @@ body {
     rotate: 0deg;
   }
   to {
-    rotate: 360deg;
+    rotate: -360deg;
   }
 }
 @keyframes pulse {
