--- a/src/css/form.module.css
+++ b/src/css/form.module.css
@@ -1,9 +1,14 @@
 .form__input {
-  padding: 1.25rem 1rem;
+  padding: 1rem 1rem;
   background: var(--container-secondary-color);
   border-radius: 1rem;
   transition: 0.3s ease-out;
 }
 .form__input:focus {
   box-shadow: 0px 0px 20px rgba(212, 201, 81, 0.5);
+}
+@media (max-width: 400px) {
+  .form {
+    padding-top: 15vw;
+  }
 }
