--- a/src/css/layout.module.css
+++ b/src/css/layout.module.css
@@ -5,7 +5,8 @@
   justify-content: center;
 }
 .flex__col__inner__medium,
-.flex__col__inner__large {
+.flex__col__inner__large,
+.flex__col__inner__small {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -17,4 +18,7 @@
 }
 .flex__col__inner__medium {
   gap: var(--gap-medium);
+}
+.flex__col__inner__small {
+  gap: var(--gap-small);
 }
