--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ body {
   /* main colors */
   --bg-color: #0d0d0d;
   --text-primary-color: #f4f4f4;
-  --text-secondary-color: #5b5b5b;
+  --text-secondary-color: #999999;
   --accent-color: #d4c951;
   --completed-color: #51d466;
   --container-primary-color: #1a1c1e;
@@ -58,7 +58,6 @@ button:active {
   justify-content: center;
   background-color: var(--bg-color);
   color: var(--text-primary-color);
-  /* padding: 5vw 0; */
 }
 .content {
   position: relative;
@@ -93,7 +92,18 @@ button:active {
     opacity: 1;
   }
 }
-
+.spacer {
+  width: 100%;
+  display: none;
+}
+@media (max-width: 400px) {
+  .content {
+    padding: 0 7vw;
+  }
+  .spacer {
+    display: block;
+  }
+}
 @media (min-width: 1200px) {
   .index__subheading {
     max-width: 40ch;
