--- a/src/css/btns.module.css
+++ b/src/css/btns.module.css
@@ -2,6 +2,7 @@
 .secondary__btn {
   padding: 1.25rem 0;
   border-radius: 1rem;
+  text-align: center;
 }
 .primary__btn {
   background: var(--text-primary-color);
