--- a/src/css/form.module.css
+++ b/src/css/form.module.css
@@ -5,7 +5,7 @@
   transition: 0.3s ease-out;
 }
 .form__input:focus {
-  box-shadow: 0px 0px 20px rgba(212, 201, 81, 0.5);
+  box-shadow: 0px 0px 20px var(--selected-input-shadow-color);
 }
 .checkbox__wrapper {
   width: 100%;
@@ -16,23 +16,41 @@
 .checkbox__item {
   position: relative;
   flex: 1 1 0px;
+  cursor: pointer;
+  transition: 0.3s ease-out;
+}
+.checkbox__item:active {
+  scale: 0.95;
 }
 .checkbox__name {
   display: block;
-  text-transform: uppercase;
+  text-transform: capitalize;
   padding: 1.25rem 0;
   color: var(--text-primary-color);
   background: var(--container-secondary-color);
   border-radius: 1rem;
   text-align: center;
   transition: 0.3s ease-out;
+  user-select: none;
 }
 .checkbox__input {
   position: absolute;
+  width: 100%;
+  height: 100%;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
+}
+.checkbox__input[type="radio"] {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  opacity: 0;
 }
 .checkbox__input:checked + .checkbox__name {
   background-color: var(--accent-color);
