--- a/src/css/home.module.css
+++ b/src/css/home.module.css
@@ -43,7 +43,7 @@
 }
 .nav__item__label {
   display: block;
-  color: #999999;
+  color: var(--text-secondary-color);
   user-select: none;
   transition: 0.3s ease-out;
 }
